--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "http://vishaalhere.github.io/newsmonkey",
-  "name": "newsmonkey",
+  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,8 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-top-loading-bar": "^2.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
